# iep_20201

./: .gitignore  CMakeLists.txt
inc/: infantry.hpp  navy.hpp  objective.hpp  soldier.hpp  team_leader.hpp
src/: CMakeLists.txt  infantry.cpp  main  main.cpp  navy.cpp  soldier.cpp
